--- a/ex_1to50.css
+++ b/ex_1to50.css
@@ -10,7 +10,6 @@ html, body{
     background-color: rgb(238, 234, 234);
     display: flex;
     flex-direction: column;
-    /* justify-content: center; */
     align-items: center;
 }
 
@@ -31,7 +30,7 @@ header{
     color:rgb(52, 52, 134)
 }
 
-#start, #restart{
+button{
     font-size: 0.8em;
     padding: 5px 20px;
     background-color: rgb(190, 190, 253);
@@ -51,3 +50,10 @@ td{
     color: white;
 }
 
+.arrB{
+    background-color: rgb(56, 56, 104);
+}
+
+.done{
+    background-color: rgb(238, 234, 234);
+}
